--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
   <div class="container">
+  
   <div class="nav">
+   
     <div class="logo"><h1>Food'S</h1></div>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -57,7 +59,7 @@
            </label>
            
            <label>
-               <input type="submit" value="Entrar" >
+               <input type="submit" value="Entrar" class="initButton">
            </label>
             
         </fieldset>
