--- a/userScreen.html
+++ b/userScreen.html
@@ -11,9 +11,9 @@
   <div class="nav">
     <div class="logo"><h1>Food'S</h1></div>
     <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="">Meus Restaurantes</a></li>
-      <li><a href="">Avaliações</a></li>
+      <li><a href="userScreen.html">Home</a></li>
+      <li><a href="#">Meus Restaurantes</a></li>
+      <li><a href="#">Avaliações</a></li>
       <li><a href="index.html">Sair</a></li>
     </ul>
     <div class="menub"></div>
@@ -27,6 +27,7 @@
     <div class="userInit">
         <img src="img/user.jpg" alt="" class="userImg">
         User
+        (Informações do usuário...)
         
         
     </div>
