--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="cadastrar.html">Cadastrar</a></li>
       <li><a href="quemsomos.html">Quem somos</a></li>
       <li><a href="duvidas.html">Dúvidas frequentes</a></li>
+      <li><a href="userScreen.html">...</a></li>
     </ul>
     <div class="menub"></div>
   </div>
