--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <li><a href="cadastrar.html">Cadastrar</a></li>
       <li><a href="quemsomos.html">Quem somos</a></li>
       <li><a href="duvidas.html">Dúvidas frequentes</a></li>
-      <li><a href="userScreen.html">...</a></li>
     </ul>
     <div class="menub"></div>
   </div>
@@ -41,7 +40,7 @@
     </div>
 
     <div class="login">
-      <form>
+      <form class="form">
          <fieldset>
           <legend>Login</legend>
            <label>
