--- a/cadastrar.html
+++ b/cadastrar.html
@@ -53,7 +53,7 @@
                                 <input type="text" id="email" required>
                             </label>
            
-                            <!-- <label>
+                             <label>
                                 Senha:
                                 <input type="text" id="senha">
                             </label>
@@ -61,7 +61,7 @@
                             <label>
                                 Repetir Senha:
                                 <input type="text">
-                            </label> -->
+                            </label>
                                         
                             <label>
                                 Cidade:
