--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2 class="menup">Bem vindo ao Food'S</h2>
         <p class="phome">O Food's (Food Searching) é uma aplicação Web desenvolvida para facilitar a localização dos lugares que você gostaria conhcer, como restaurantes, bares e afins , mais requisitados de Pouso Alegre.</p>
         <p class="phome"> Aqui você vê a avaliação feita por cada pessoa pelo serviço prestado pelo site, consulta detalhes e informações de cada estabelecimento, sua localização , entre outros.</p>
-        <p class="phome">Para usar é muito fácil , apenas realize seu cadastro no link Cadastrar na parte superior da página e comece a usar o serviço ,além de usar ajude-nos também , enviando sugestões e críticas na parte de Contato e Dúvidas Frequentes.</p>
+        <p class="phome">Para usar é muito fácil , apenas realize seu cadastro no link Cadastrar na parte superior da página e comece a usar o serviço ,para maiores informações e solução de dúvidas acesse a aba Dúvidas Frequentes.</p>
         
     </div>
 
