added "perdi minha senha"

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                Manter conectado
            </label>
            
+           <label class="senhaPerdida">
+               <a href="">Esqueci minha senha</a>
+           </label>
+           
            <label>
                <input type="submit" value="Entrar" class="initButton">
            </label>
